# nrf54lm20a_test

all-in-one-demo/: platformio.ini
all-in-one-demo/src/: main.c
all-in-one-demo/zephyr/: CMakeLists.txt  prj.conf
all-in-one-demo/zephyr/boards/: xiao_nrf54lm20a_nrf54lm20a_cpuapp.overlay  xiao_nrf54lm20b_nrf54lm20a_cpuapp.overlay
docs/superpowers/plans/: 2026-04-17-factory-at-v2.md
docs/superpowers/specs/: 2026-04-17-factory-at-v2-design.md
factory-rp2040/Test_Code/: platformio.ini
factory-rp2040/Test_Code/docs/: AT_SENDER_PROTOCOL.md
factory-rp2040/Test_Code/src/: Test_Code.ino  testplan.txt
test_plan/04-uart21-pin/: platformio.ini
test_plan/05-bmp280_i2c/: README.md  platformio.ini
test_plan/05-bmp280_i2c/src/: main.c
test_plan/05-bmp280_i2c/zephyr/: CMakeLists.txt  prj.conf
test_plan/05-i2c-speed/: platformio.ini
test_plan/05-i2c-speed/src/: main.c
test_plan/05-i2c_read/: platformio.ini
test_plan/06-sh1106-oled-demo/: platformio.ini
test_plan/06-w25q128jv-spi-8m-demo/: platformio.ini
test_plan/06-w25q128jv-spi-8m-test/: README.md  platformio.ini
test_plan/06-w25q128jv-spi-8m-test/zephyr/: CMakeLists.txt  prj.conf
test_plan/06-w25q128jv-spi-8m-test/zephyr/boards/: xiao_nrf54lm20a_nrf54lm20a_cpuapp.overlay
test_plan/07-uart20_demo/: platformio.ini
test_plan/07-uart_21_1M/: platformio.ini
test_plan/08-UARTR-back/: README.md  platformio.ini
test_plan/08-UARTR-back/src/: main.c
test_plan/08-adc-demo/: platformio.ini
test_plan/10-zephyr-pwm/: platformio.ini
test_plan/12-zephyr-dmic-recorder/: platformio.ini
test_plan/13-record_text/: prj.conf  sample.yaml
test_plan/16-direct_test_mode/: CMakeLists.txt
test_plan/16-direct_test_mode_rev/: CMakeLists.txt  README.md
test_plan/16-direct_test_mode_send/: CMakeLists.txt  README.md  app.overlay  prj.conf  sample.yaml  sysbuild.cmake
test_plan/17-py25q128ha-demo/: README.md  platformio.ini
test_plan/18-npm1300-charge-current-500/: CMakeLists.txt  README.md  sample.yaml
test_plan/18-npm1300-charge-current-800/: CMakeLists.txt  README.md  prj.conf  sample.yaml
test_plan/19-usb-cdc-blink-echo/: CMakeLists.txt  README.md  prj.conf  sample.yaml
test_plan/19-usb-cdc-blink-echo/src/: main.c
test_plan/20-edge-ai-gesture-recognition-xiao/: CMakeLists.txt  Kconfig  README.md  prj.conf
test_plan/20-edge-ai-gesture-recognition-xiao/boards/: xiao_nrf54lm20b_nrf54lm20b_cpuapp.overlay
test_plan/20-edge-ai-gesture-recognition-xiao/src/: imu_lsm6dsl.c  main.c
test_plan/20b-all/: CMakeLists.txt  README.md  sample.yaml
test_plan/gpio-high-drive/: platformio.ini
test_plan/gpio-toggle-test/: README.md
test_plan/green-led-on/: platformio.ini
test_plan/grove-barometer-bme280-spi/: platformio.ini
test_plan/grove-barometer-spa06-spi/: README.md
test_plan/rgb-led-blink/: platformio.ini
test_plan/ship_mode/: platformio.ini
test_plan/ship_mode/zephyr/: CMakeLists.txt  prj.conf
test_plan/ship_mode/zephyr/boards/: xiao_nrf54lm20a_nrf54lm20a_cpuapp.overlay  xiao_nrf54lm20b_nrf54lm20a_cpuapp.overlay
test_plan/usb-boot-dfu/: CMakeLists.txt  Kconfig.sysbuild  README.md  prj.conf  sample.yaml  sysbuild.cmake  sysbuild.conf  xiao_single_slot_partitions.dtsi
test_plan/浅度睡眠/: platformio.ini
test_plan/深睡-sw0-关flash/: platformio.ini
(+119 files in other folders)
